# agentic_KB_auditor

./: .env.example  .gitignore  =2.3.1  README.md  pyproject.toml  requirements.txt
configs/: config.yaml  logging.yaml
configs/prompts/: contradiction.yaml  gap.yaml  remediation.yaml  version.yaml
data/kb/: overview.md
docs/: agent_design.md  architecture.md
scripts/: backfill_embeddings.py  run_pipeline.py  test_agents.py  test_safety.py
src/: main.py
src/agents/: trigger.py
src/agents/base/: base_agent.py
src/agents/implementations/: coverage_agent.py  duplicate_agent.py  learning_agent.py  retrieval_agent.py  scoring_agent.py  supervisor_agent.py  version_agent.py
src/application/orchestrator/: pipeline.py  scheduler.py
src/core/: config.py  logger.py  scanner.py  security.py  session_manager.py  settings.py
src/domain/entities/: article.py  audit_signal.py  version.py
src/domain/interfaces/: llm_interface.py  repository.py
src/evaluation/: metrics.py  scoring.py
src/feedback/: feedback_handler.py
src/infrastructure/db/: audit_logs.py  feedback_db.py  integration_requests.py  review_queue.py  sqlite.py  (+1 more)
src/installer/: detector.py  injector.py  installer.py
src/kb/: chunker.py  embedder.py  loader.py  search.py  sync_engine.py  vector_store.py
src/observability/: middleware.py
src/plugin/: cli.py  rag_auditor.py
src/processing/: cleaner.py  consensus_checker.py  ingestion.py  normalizer.py
src/remediation/: engine.py  strategies.py
src/utils/: helpers.py  id_gen.py
tests/: test_agents.py  test_kb.py  test_pipeline.py
(+16 files in other folders)
